[gd_scene load_steps=2 format=3 uid="uid://bb18cnmhvj033"]

[ext_resource type="Script" uid="uid://dyx5f08lewnxu" path="res://objects/shop/shop.gd" id="1_puukc"]

[node name="shop" type="CanvasLayer"]
script = ExtResource("1_puukc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 155.0
offset_bottom = 120.0

[node name="MoneyDisplay" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Money ="

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Item 1"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Buy"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Item 2"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "Buy"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Item 3"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
focus_mode = 0
text = "Buy"

[node name="NextRound" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Next Round"

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = -1.0
offset_right = 155.0
offset_bottom = 124.0
color = Color(0.282353, 0, 0, 1)

[node name="moneyRequiredLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 43.0
offset_top = 32.0
offset_right = 109.0
offset_bottom = 81.0
text = "Space to
Cashout"
